@startuml


entity STAFF_DETAILS {
    * id : INTEGER <<PK>>
    --
    * first_name : VARCHAR(64)
    + last_name : VARCHAR(128)
    * email : VARCHAR(128)
    * password : VARCHAR(128)
    * telephone : VARCHAR(16)
    * created_at : DATETIME
    * modified_at : DATETIME
}

entity CUSTOMER_DETAILS {
    * id : INTEGER <<PK>>
    --
    * first_name : VARCHAR(64)
    + last_name : VARCHAR(128)
    * email : VARCHAR(128)
    * password : VARCHAR(128)
    * dob : DATE
    + telephone : VARCHAR(16)
    + member_card_sn : CHAR(16)
    * points : INTEGER
    * created_at : DATETIME
    * modified_at : DATETIME
}

entity CUSTOMER_PURCHASE_INSTANCE {
    * id : INTEGER <<PK>>
    --
    * id_cust : INTEGER <<FK>>
    * points_gained : DECIMAL(10,2)
    * points_used : DECIMAL(10,2)
    * created_at : DATETIME
}

entity PRODUCT_BRAND {
    * id : INTEGER <<PK>>
    --
    * name : VARCHAR(64)
    * active : BOOL
    * created_at : DATETIME
    * modified_at : DATETIME
    * modified_by : INTEGER <<FK>>
}

entity PRODUCT_COUNTRY {
    * id : INTEGER <<PK>>
    --
    * name : VARCHAR(64)
}

entity PRODUCT_CATEGORY {
    * id : INTEGER <<PK>>
    --
    * name : VARCHAR(64)
    * image_url : VARCHAR(256)
    * active : BOOL
    + created_at : DATETIME
    + modified_at : DATETIME
    + modified_by : INTEGER <<FK>>
}

entity PRODUCT_DETAILS {
    * id : INTEGER <<PK>>
    --
    * id_brand : INTEGER <<FK>>
    * id_country : INTEGER <<FK>>
    * id_category_primary : INTEGER <<FK>>
    * id_category_parent_major : INTEGER <<FK>>
    + id_category_parent_minor : INTEGER <<FK>>
    * id_category_secondary : VARCHAR(1024)
    * name : VARCHAR(128)
    * price : DECIMAL(10,2)
    * display_unit : VARCHAR(32)
    + description : VARCHAR(5120)
    + key_information : VARCHAR(5120)
    * rating_1 : INTEGER
    * rating_2 : INTEGER
    * rating_3 : INTEGER
    * rating_4 : INTEGER
    * rating_5 : INTEGER
    + image_url : VARCHAR(256)
    * active : BOOL
    * created_at : DATETIME
    * modified_at : DATETIME
    * modified_by : INTEGER <<FK>>
}

entity CUSTOMER_PURCHASE_INSTANCE_ITEMS {
    * id : INTEGER <<PK>>
    --
    * order_id : INTEGER <<FK>>
    * id_prod : INTEGER <<FK>>
    * quantity : INTEGER
    * price : DECIMAL(10,2)
}

entity CUSTOMER_CART_ITEMS {
    * id : INTEGER <<PK>>
    --
    * id_cust : INTEGER <<FK>>
    * id_prod : INTEGER <<FK>>
    * quantity : INTEGER
}

STAFF_DETAILS ||--o{ PRODUCT_BRAND : "modified_by"
STAFF_DETAILS ||--o{ PRODUCT_CATEGORY : "modified_by"
STAFF_DETAILS ||--o{ PRODUCT_DETAILS : "modified_by"
CUSTOMER_DETAILS ||--o{ CUSTOMER_PURCHASE_INSTANCE : "id_cust"
CUSTOMER_DETAILS ||--o{ CUSTOMER_CART_ITEMS : "id_cust"
PRODUCT_BRAND ||--o{ PRODUCT_DETAILS : "id_brand"
PRODUCT_COUNTRY ||--o{ PRODUCT_DETAILS : "id_country"
PRODUCT_CATEGORY ||--o{ PRODUCT_DETAILS : "id_category_primary"
PRODUCT_CATEGORY ||--o{ PRODUCT_DETAILS : "id_category_parent_major"
PRODUCT_CATEGORY ||--o{ PRODUCT_DETAILS : "id_category_parent_minor"
PRODUCT_DETAILS ||--o{ CUSTOMER_PURCHASE_INSTANCE_ITEMS : "id_prod"
CUSTOMER_PURCHASE_INSTANCE ||--o{ CUSTOMER_PURCHASE_INSTANCE_ITEMS : "order_id"
PRODUCT_DETAILS ||--o{ CUSTOMER_CART_ITEMS : "id_prod"

legend bottom right
    | **Bullet** | **Type** |
    |<#000000>| NOT NULL |
    |<#84BE84>| NULLABLE |
endlegend

@enduml
